--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,21 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>Sleep Calculator</title>
+	<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+	<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 </head>
 <body>
-    <h1>Sleep Calculator</h1>
-    <form action="/calculate" method="POST">
-        <label for="time_to_fall_asleep">How long does it take you to fall asleep? (minutes):</label>
-        <input type="number" id="time_to_fall_asleep" name="time_to_fall_asleep" placeholder="15">
-        <button type="submit">Calculate</button>
-    </form>
+    <div class="title-container">
+        <h1>RestRight</h1>
+        <img src="../static/stars.png" alt="stars" class="stars">
+    </div>
+	
+<form action="/calculate" method="POST">
+      <label for="time_to_fall_asleep">How long does it take you to fall asleep? (minutes)</label>
+      <input type="number" id="time_to_fall_asleep" name="time_to_fall_asleep" placeholder="15" min="1" step="1" oninput="this.value = this.value.replace(/^0+/, '')">
+      <button type="submit">Calculate</button>
+</form>
 </body>
 </html>
