--- a/templates/result.html
+++ b/templates/result.html
@@ -68,7 +68,7 @@
             var formattedTime = hour + ":" + minute.padStart(2, '0') + " " + period;
             return formattedTime; // returns formatted time
         
-        // im so confused lol
+        // im so confused lol //im in tears 
         }
 
     </script>
