--- a/templates/result.html
+++ b/templates/result.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <!-- Current time and toggle switch -->
+    <!-- current time and toggle switch -->
     <div class="current-time-container">
         <div class="toggle-container">
             <label class="switch24">
@@ -19,7 +19,7 @@
     </div>
 
     <h1 class="results">Your Sleep Calculation</h1>
-
+<!-- this should work this should work this should work-->
     <div class="result-box">
         <p class="result-label">Current Time</p>
         <p class="result-value" id="currentTime" data-original-time="{{ result.current_time }}">{{ result.current_time }}</p>
